Fix issue #851
-load more button not aligned proper.

--- a/src/app/styl/show_browser/show_list.styl
+++ b/src/app/styl/show_browser/show_list.styl
@@ -1,3 +1,6 @@
+#load-more-item
+	margin 10px
+
 .show-list
 	height: 100%
 	width: calc(100% - 5px)
